# OCR-Pipeline

./: .bash_history  .gitignore  .viminfo  README.md  pyproject.toml
ocr_extraction/: .gitignore  battleground.py  clean_data.py  full_test.py  images_suraya.py  pdf_docling.py  pdf_marker.py  pdf_suraya.py  pdf_vlm.py  pdf_vlm_qn.py  run_battleground.py  test_dots.py
