[project]
name = "ocr-extraction"
version = "0.1.0"
description = "Document processing pipeline using Surya OCR and Docling"
requires-python = ">=3.10"

dependencies = [
    # Core Image & PDF handling
    "pillow>=10.0.0",
    "pypdfium2>=4.28.0",
    # Validation tools
    "thefuzz>=0.22.1",
    # Surya OCR and its specific requirements
    "surya-ocr>=0.17.1",
    "transformers>=4.56.1,<5.0.0", # Strictly pinned to avoid the v5 foundation predictor crash
    # Docling for layout and table extraction
    "docling>=2.0.0",
    "rapidocr-onnxruntime>=1.4.4",
    "onnxruntime>=1.24.3",
    "qwen-vl-utils>=0.0.14",
    "accelerate>=1.13.0",
    "torchvision>=0.26.0",
    "bitsandbytes>=0.49.2",
    "marker-pdf>=1.10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Optional: Configuration for standard linting/formatting if you use it
[tool.ruff]
line-length = 100
